force-app/main/default/objects/User/fields/BSLS_ID__c.field-meta.xml
<CustomField>
    <fullName>BSLS_ID__c</fullName>
    <externalId>true</externalId>
    <label>BSLS ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>