force-app/main/default/objects/User/fields/Handling__c.field-meta.xml
<CustomField>
    <fullName>Handling__c</fullName>
    <label>Handling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Type</valueSetName>
    </valueSet>
</CustomField>